--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
   --destructive-foreground: oklch(1.0000 0 0);
   --border: oklch(0.9300 0.0094 286.2156);
   --input: oklch(0.9401 0 0);
-  --ring: oklch(0 0 0);
+  --ring: oklch(0.5393 0.2713 286.7462);
   --chart-1: oklch(0.7459 0.1483 156.4499);
   --chart-2: oklch(0.5393 0.2713 286.7462);
   --chart-3: oklch(0.7336 0.1758 50.5517);
@@ -40,21 +40,21 @@
   --font-serif: Lora, serif;
   --font-mono: IBM Plex Mono, monospace;
   --radius: 1.4rem;
-  --shadow-x: 0px;
+  --shadow-x: 2px;
   --shadow-y: 2px;
-  --shadow-blur: 3px;
+  --shadow-blur: 4.5px;
   --shadow-spread: 0px;
-  --shadow-opacity: 0.16;
-  --shadow-color: hsl(0 0% 0%);
-  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
-  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
-  --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
-  --shadow: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
-  --shadow-md: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 2px 4px -1px hsl(0 0% 0% / 0.16);
-  --shadow-lg: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 4px 6px -1px hsl(0 0% 0% / 0.16);
-  --shadow-xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 8px 10px -1px hsl(0 0% 0% / 0.16);
-  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.40);
-  --tracking-normal: -0.025em;
+  --shadow-opacity: 0.17;
+  --shadow-color: #7033ff;
+  --shadow-2xs: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.09);
+  --shadow-xs: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.09);
+  --shadow-sm: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.17), 2px 1px 2px -1px hsl(257.9412 100% 60% / 0.17);
+  --shadow: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.17), 2px 1px 2px -1px hsl(257.9412 100% 60% / 0.17);
+  --shadow-md: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.17), 2px 2px 4px -1px hsl(257.9412 100% 60% / 0.17);
+  --shadow-lg: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.17), 2px 4px 6px -1px hsl(257.9412 100% 60% / 0.17);
+  --shadow-xl: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.17), 2px 8px 10px -1px hsl(257.9412 100% 60% / 0.17);
+  --shadow-2xl: 2px 2px 4.5px 0px hsl(257.9412 100% 60% / 0.43);
+  --tracking-normal: 0;
   --spacing: 0.27rem;
 }
 
@@ -95,20 +95,20 @@
   --font-serif: Lora, serif;
   --font-mono: IBM Plex Mono, monospace;
   --radius: 1.4rem;
-  --shadow-x: 0px;
+  --shadow-x: 2px;
   --shadow-y: 2px;
-  --shadow-blur: 3px;
+  --shadow-blur: 4.5px;
   --shadow-spread: 0px;
-  --shadow-opacity: 0.16;
-  --shadow-color: hsl(0 0% 0%);
-  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
-  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
-  --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
-  --shadow: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
-  --shadow-md: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 2px 4px -1px hsl(0 0% 0% / 0.16);
-  --shadow-lg: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 4px 6px -1px hsl(0 0% 0% / 0.16);
-  --shadow-xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 8px 10px -1px hsl(0 0% 0% / 0.16);
-  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.40);
+  --shadow-opacity: 0.17;
+  --shadow-color: #000000;
+  --shadow-2xs: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.09);
+  --shadow-xs: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.09);
+  --shadow-sm: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.17), 2px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.17), 2px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow-md: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.17), 2px 2px 4px -1px hsl(0 0% 0% / 0.17);
+  --shadow-lg: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.17), 2px 4px 6px -1px hsl(0 0% 0% / 0.17);
+  --shadow-xl: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.17), 2px 8px 10px -1px hsl(0 0% 0% / 0.17);
+  --shadow-2xl: 2px 2px 4.5px 0px hsl(0 0% 0% / 0.43);
 }
 
 @theme inline {
