--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,7 @@
   --shadow-2xl: 0 24px 48px -12px hsl(220 10% 20% / 0.2), inset 0 1px 0 0 hsl(0 0% 100% / 0.5), inset -1px 0 0 0 hsl(220 10% 20% / 0.1);
   --tracking-normal: 0;
   --spacing: 0.27rem;
+  --banner-height: 0rem;
 }
 
 .dark {
